fixes input help alignment

--- a/src/utils/decorators/input-label/input-label.scss
+++ b/src/utils/decorators/input-label/input-label.scss
@@ -12,7 +12,7 @@
   vertical-align: middle;
 
   .carbon-help {
-    margin-top: -5px;
+    top: -2px;
   }
 }
 
